Client index page is done

--- a/TeslaRent_Client/wwwroot/index.html
+++ b/TeslaRent_Client/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>TeslaRent_Client</title>
     <base href="/" />
-    <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />-->
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <!--149.4/149.4 Добавить в пользовательский проект ссылку на MDBootstrap-->
     <link rel="stylesheet" href="css/mdb.min.css" />
     <link href="css/app.css" rel="stylesheet" />
@@ -17,7 +17,11 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div class="text-center">
+            <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/2796ed81999693.5d10c0872415e.gif" />
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
