Stripe integration is done

--- a/TeslaRent_Client/wwwroot/index.html
+++ b/TeslaRent_Client/wwwroot/index.html
@@ -33,7 +33,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script src="https://kit.fontawesome.com/e4fa5c8403.js" crossorigin="anonymous"></script>
-    <script src="/js/toastrCommon.js"></script>
+    <script src="js/toastrCommon.js"></script>
+
+    <script src="js/StripePayment.js"></script>
+    <script src="https://js.stripe.com/v3/" defer></script>
+    <!--После этого возвращаемся в компонент CarDetails и вызываем метод страйпа-->
+
     <!--149.3 Добавить в пользовательский проект ссылку на MDBootstrap-->
     <script type="text/javascript" src="/js/mdb.min.js"></script>
 
